fixed alignment for #trio

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,8 @@ div.transparent-box {
 
 @media only screen and (max-width: 420px) {
   #trio {
-    width: 90vw;
+    width: 100%;
+    padding: auto;
   }
   #bp {width: 90vw}
 }
